src/components/style/NotificationsPage.scss
@use "card";
@use "var";
@use "component";
.notifications-page {
  padding: 1.5em;
  box-sizing: border-box;
  width: 40rem;
  max-width: 100%;
  margin: auto;
  display: flex;
  flex-direction: column;
  gap: 0.5em;
  header {
    font-size: 1.7rem;
  }
  > button {
    @extend .button-colored;
    @extend .button-radius;
  }
  .notification-card {
    @extend %card;
    width: 100%;
    max-width: 100%;
    margin: 0 1em;
    background-color: var.$background-2;
    position: relative;
    cursor: pointer;
    &:hover {
      background-color: var.$background-3;
    }
    .posted-at {
      font-size: 0.9rem;
      position: absolute;
      bottom: 10px;
      right: 10px;
      text-align: end;
    }
    .notification-link {
      position: absolute;
      inset: 0;
      span {
        margin-left: 7rem;
        margin-top: 1rem;
        display: inline-block;
        font-size: 1em;
      }
    }
    .image-link {
      z-index: 1;
      border-radius: 50%;
      width: fit-content;
      img {
        border-radius: 50%;
        max-height: 5rem;
        transition: 0.3s;
        &:hover {
          transform: scale(1.2);
          filter: brightness(1.2);
        }
      }
    }
  }
  .not-viewed {
    background-color: var.$background-3;
  }
}

